--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
                 <a href="apps.html">Uygulamalar</a>
                 <a href="contact.html" class="btn-cta">İletişime Geç</a>
             </div>
+            <button class="mobile-toggle" id="mobile-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu" id="mobile-menu">
+        <a href="index.html">Ana Sayfa</a>
+        <a href="programming.html">Programlama</a>
+        <a href="apps.html">Uygulamalar</a>
+        <a href="contact.html">İletişim</a>
+    </div>
 
     <main>
         <section class="hero">
@@ -56,7 +67,7 @@
             </div>
         </section>
 
-        <section id="tech" class="container">
+        <section id="tech" class="container section-spacing">
             <h2 class="section-title">Teknolojik <span class="underline">Yetkinlikler</span></h2>
             <div class="card-grid">
                 <div class="glass-card" style="text-align: center;">
@@ -141,6 +152,32 @@
         </div>
     </footer>
 
+    <script>
+        const mobileToggle = document.getElementById('mobile-toggle');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        if (mobileToggle && mobileMenu) {
+            mobileToggle.addEventListener('click', () => {
+                mobileMenu.classList.toggle('active');
+                const icon = mobileToggle.querySelector('i');
+                if (icon) {
+                    icon.classList.toggle('fa-bars');
+                    icon.classList.toggle('fa-times');
+                }
+            });
+
+            mobileMenu.querySelectorAll('a').forEach(link => {
+                link.addEventListener('click', () => {
+                    mobileMenu.classList.remove('active');
+                    const icon = mobileToggle.querySelector('i');
+                    if (icon) {
+                        icon.classList.add('fa-bars');
+                        icon.classList.remove('fa-times');
+                    }
+                });
+            });
+        }
+    </script>
 </body>
 
 </html>
