--- a/apps.html
+++ b/apps.html
@@ -22,10 +22,10 @@
         <div class="nav-content">
             <a href="index.html" class="logo">KNSK</a>
             <div class="nav-links">
-                <a href="index.html">Ana Sayfa</a>
-                <a href="programming.html">Programlama</a>
-                <a href="apps.html" class="active">Uygulamalar</a>
-                <a href="contact.html" class="btn-cta">İletişime Geç</a>
+                <a href="/">Ana Sayfa</a>
+                <a href="programming">Programlama</a>
+                <a href="apps" class="active">Uygulamalar</a>
+                <a href="contact" class="btn-cta">İletişime Geç</a>
             </div>
             <button class="mobile-toggle" id="mobile-toggle">
                 <i class="fas fa-bars"></i>
@@ -35,10 +35,10 @@
 
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobile-menu">
-        <a href="index.html">Ana Sayfa</a>
-        <a href="programming.html">Programlama</a>
-        <a href="apps.html">Uygulamalar</a>
-        <a href="contact.html">İletişim</a>
+        <a href="/">Ana Sayfa</a>
+        <a href="programming">Programlama</a>
+        <a href="apps">Uygulamalar</a>
+        <a href="contact">İletişim</a>
     </div>
 
     <main class="container" style="padding-top: 150px; padding-bottom: 150px;">
