--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="nav-content">
             <a href="index.html" class="logo">KNSK</a>
             <div class="nav-links">
-                <a href="index.html" class="active">Ana Sayfa</a>
-                <a href="programming.html">Programlama</a>
-                <a href="apps.html">Uygulamalar</a>
-                <a href="contact.html" class="btn-cta">İletişime Geç</a>
+                <a href="/" class="active">Ana Sayfa</a>
+                <a href="programming">Programlama</a>
+                <a href="apps">Uygulamalar</a>
+                <a href="contact" class="btn-cta">İletişime Geç</a>
             </div>
             <button class="mobile-toggle" id="mobile-toggle">
                 <i class="fas fa-bars"></i>
@@ -36,10 +36,10 @@
 
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobile-menu">
-        <a href="index.html">Ana Sayfa</a>
-        <a href="programming.html">Programlama</a>
-        <a href="apps.html">Uygulamalar</a>
-        <a href="contact.html">İletişim</a>
+        <a href="/">Ana Sayfa</a>
+        <a href="programming">Programlama</a>
+        <a href="apps">Uygulamalar</a>
+        <a href="contact">İletişim</a>
     </div>
 
     <main>
@@ -53,7 +53,7 @@
                     <p>Ben, Kaan Saka. Java ve Swift ekosistemlerinde ölçeklenebilir sistemler tasarlayan bir Fullstack
                         Engineer. Karmaşık problemleri temiz ve performanslı kodla çözmeye odaklanıyorum.</p>
                     <div style="display: flex; gap: 20px;">
-                        <a href="apps.html" class="btn-cta">Projelerimi Gör</a>
+                        <a href="apps" class="btn-cta">Projelerimi Gör</a>
                         <a href="#tech"
                             style="text-decoration: none; color: var(--text-main); font-weight: 700; display: flex; align-items: center; gap: 8px;">
                             Yeteneklerim <i class="fas fa-arrow-right"></i>
